# ebDsicord

./: LICENSE  setup.cfg
ebDiscord/: __init__.py
