[metadata]
name = EbDsicord
version = 0.0.1
author = SpaceX#1919
author_email = edgardbu@gmail.com
description = A way make discord bots with python super easy
long_description = file: README.md
long_description_content_type = text/markdown
url = #TODO add url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True